<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Quick Squiz Settings" >

   <PreferenceCategory
       android:title="Story settings">

       <MultiSelectListPreference
           android:defaultValue="@string/football_default"
           android:key="@string/keyTopic"
           android:title="@string/topicTitle"
           android:summary="@string/topicSummary"
           android:entries="@array/topics"
           android:entryValues="@array/topicsValues"
           />
       <SwitchPreference
           android:title="Restricted to post limit"
           android:editable="true"
           android:key="enable_date"
          />
       <EditTextPreference
           android:key="@string/keyPosts"
           android:dependency="enable_date"
           android:summary="@string/postSummary"
           android:dialogTitle="How many posts do you want to limit to"
           android:title="@string/postTitle"
           android:selectAllOnFocus="true"
           android:inputType="numberDecimal"
           />


   </PreferenceCategory>
</PreferenceScreen>
